--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "www.linkedin.com/in/chia-lun-chang-natalie-chang"
   orcid            : "http://orcid.org/0000-0002-2597-0842"
   pinterest        :
   soundcloud       :
