--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Natalie Chang"
-  avatar           : "profile.png"
+  avatar           : "notion-avatar-1667791030462.png"
   bio              : "MSC (Epi) BSc (Pharm)"
   location         : "Taiwan"
   employer         :
