--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Natalie Chang"
   avatar           : "notion-avatar-1667791030462.png"
-  bio              : "MSC (Epi) BSc (Pharm)"
+  bio              : "MSc (Epi) BSc (Pharm)"
   location         : "Taiwan"
   employer         :
   pubmed           :  # example: "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
