--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
+minimal_mistakes_skin    : "air" 
 # Site Settings
 locale                   : "en-US"
 title                    : "Home Page"
