--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ minimal_mistakes_skin    : "air"
 locale                   : "en-US"
 title                    : "Home Page"
 title_separator          : "-"
-name                     : &name "Natalie Chang"
+name                     : &name "Chia-Lun (Natalie) Chang"
 description              : &description "MSc (Epi) BSC (Pharm)"
 url                      : https://gnahcaihc.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
