--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Natalie Chang"
+  name             : "Chia-Lun (Natalie) Chang"
   avatar           : "notion-avatar-1667791030462.png"
   bio              : "MSc (Epi) BSc (Pharm)"
   location         : "Taiwan"
