--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   employer         :
   pubmed           :  # example: "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    :  # example: "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : 
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "gnahcaihc"
+  github           :  # example" "gnahcaihc"
   google_plus      :
   keybase          :
   instagram        :
