--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Home Page"
 title_separator          : "-"
 name                     : &name "Chia-Lun (Natalie) Chang"
 description              : &description "MSc (Epi) BSC (Pharm)"
-url                      : https://gnahcaihc.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://nataliechialunc.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "gnahcaihc/gnahcaihc.github.io"
+repository               : "nataliechialunc/nataliechialunc.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
